# slidingwindowsurf

./: CMakeLists.txt
include/: slidingwindowsurf.h
src/: slidingwindowsurf.cpp
test/: slidingwindowsurftest.cpp
